- 3011773: Add Quartz as scheduler service - 3138603: Upgrade Tomcat to version 6.0.29 - Lucene upgrade to 2.9.4

--- a/WebContent/WEB-INF/zul/scheduler/index.zul
+++ b/WebContent/WEB-INF/zul/scheduler/index.zul
@@ -14,213 +14,21 @@
 	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="scheduler"
-	use="com.jaeksoft.searchlib.web.controller.SchedulerController">
-	<panel title="@{scheduler.currentEditMode}" border="normal"
-		collapsible="true">
-		<panelchildren>
-			<grid>
-				<columns sizable="false">
-					<column align="right" width="150px" />
-					<column align="left" />
-				</columns>
-				<rows>
-					<row>
-						<label value="Job name: " />
-						<textbox value="@{scheduler.currentJob.name}"
-							readonly="@{scheduler.selected}" cols="50" />
-					</row>
-					<row>
-						<label value="Active: " />
-						<checkbox label="enabled"
-							checked="@{scheduler.currentJob.active}" />
-					</row>
-					<row>
-						<vbox>
-							<label value="Cron expression " />
-							<button target="_blank"
-								label="Documentation"
-								href="http://en.wikipedia.org/wiki/CRON_expression" />
-						</vbox>
-						<grid>
-							<columns>
-								<column label="Seconds" />
-								<column label="Minutes" />
-								<column label="Hours" />
-								<column label="Day of month" />
-								<column label="Month" />
-								<column label="Day of week" />
-								<column label="Year" />
-							</columns>
-							<rows>
-								<row>
-									<textbox
-										value="@{scheduler.currentJob.cron.seconds}" width="95%" />
-									<textbox
-										value="@{scheduler.currentJob.cron.minutes}" width="95%" />
-									<textbox
-										value="@{scheduler.currentJob.cron.hours}" width="95%" />
-									<textbox
-										value="@{scheduler.currentJob.cron.dayOfMonth}" width="95%" />
-									<textbox
-										value="@{scheduler.currentJob.cron.month}" width="95%" />
-									<textbox
-										value="@{scheduler.currentJob.cron.dayOfWeek}" width="95%" />
-									<textbox
-										value="@{scheduler.currentJob.cron.year}" width="95%" />
-								</row>
-							</rows>
-						</grid>
-					</row>
-					<row>
-						<label value="Tasks " />
-						<listbox
-							model="@{scheduler.currentJob.tasks}">
-							<listhead>
-								<listheader width="200px" label="Task" />
-								<listheader label="Properties" />
-								<listheader align="center" width="120px"
-									label="action" />
-							</listhead>
-							<auxhead>
-								<auxheader>
-									<listbox
-										model="@{scheduler.taskEnum}" mold="select"
-										selectedItem="@{scheduler.selectedTask}" />
-								</auxheader>
-								<auxheader>
-									<grid
-										visible="@{scheduler.currentTask.task.property}"
-										model="@{scheduler.currentTask.properties}">
-										<columns>
-											<column width="150px"
-												align="right" />
-											<column />
-										</columns>
-										<rows>
-											<row
-												self="@{each='property'}">
-												<label
-													value="@{property.name}" />
-												<combobox
-													model="@{property.valueList}" value="@{property.value}"
-													selectedItem="@{property.value}" />
-											</row>
-										</rows>
-									</grid>
-								</auxheader>
-								<auxheader align="center">
-									<button tooltiptext="Add a task"
-										image="/images/action_add.png" forward="onTaskAdd" />
-								</auxheader>
-							</auxhead>
-							<listitem self="@{each='taskItem'}">
-								<listcell>
-									<label
-										value="@{taskItem.task.name}" />
-								</listcell>
-								<listcell>
-									<listbox
-										visible="@{taskItem.task.property}"
-										model="@{taskItem.properties}">
-										<listhead>
-											<listheader align="right"
-												width="150px" />
-											<listheader />
-										</listhead>
-										<listitem
-											self="@{each='property2'}">
-											<listcell>
-												<label
-													value="@{property2.name}" />
-												<label value=": " />
-											</listcell>
-											<listcell
-												label="@{property2.value}" />
-										</listitem>
-									</listbox>
-								</listcell>
-								<listcell>
-									<custom-attributes
-										taskitem="@{taskItem}" />
-									<button
-										tooltiptext="Move the task up" image="/images/arrow_top.png"
-										onClick="scheduler.onTaskUp(self)" />
-									<button
-										tooltiptext="Move the task down"
-										image="/images/arrow_down.png"
-										onClick="scheduler.onTaskDown(self)" />
-									<space />
-									<button
-										tooltiptext="Remove the task"
-										image="/images/action_delete.png"
-										onClick="scheduler.onTaskRemove(self)" />
-								</listcell>
-							</listitem>
-						</listbox>
-						<label value="Task list" />
-					</row>
-				</rows>
-				<foot>
-					<footer span="3">
-						<vbox width="100%" align="center">
-							<hbox visible="@{scheduler.selected}">
-								<button label="Cancel"
-									forward="onCancel" />
-								<space width="10px" />
-								<button label="Save" forward="onSave" />
-								<space width="30px" />
-								<button label="Delete"
-									forward="onDelete" />
-							</hbox>
-							<hbox visible="@{scheduler.notSelected}">
-								<button label="Create" forward="onSave" />
-							</hbox>
-						</vbox>
-					</footer>
-				</foot>
-			</grid>
-		</panelchildren>
-	</panel>
-
-	<separator height="5" />
-
-	<panel title="List of existing jobs and their settings"
-		border="normal">
-		<panelchildren>
-			<listbox model="@{scheduler.jobs}"
-				selectedItem="@{scheduler.selectedJob}">
-				<listhead>
-					<listheader label="Name" />
-					<listheader tooltiptext="Active" label="A" width="50px" />
-					<listheader tooltiptext="Seconds" label="S" width="50px" />
-					<listheader tooltiptext="Minutes" label="M" width="50px"/>
-					<listheader tooltiptext="Hours" label="H" width="50px"/>
-					<listheader tooltiptext="Day of month" label="DM" width="50px"/>
-					<listheader tooltiptext="Month" label="M" width="50px"/>
-					<listheader tooltiptext="Day of week" label="DW" width="50px"/>
-					<listheader tooltiptext="Year" label="W" width="50px"/>
-					<listheader label="Status" />
-					<listheader label="Error" />
-				</listhead>
-				<listitem self="@{each=job}">
-					<listcell label="@{job.name}" />
-					<listcell>
-						<image src="images/action_check.png"
-							visible="@{job.active}" />
-					</listcell>
-					<listcell label="@{job.cron.seconds}" />
-					<listcell label="@{job.cron.minutes}" />
-					<listcell label="@{job.cron.hours}" />
-					<listcell label="@{job.cron.dayOfMonth}" />
-					<listcell label="@{job.cron.month}" />
-					<listcell label="@{job.cron.dayOfWeek}" />
-					<listcell label="@{job.cron.year}" />
-					<listcell label="" />
-					<listcell label="@{job.lastError.message}" />
-				</listitem>
-			</listbox>
-		</panelchildren>
-	</panel>
-
-</window>
+<tabbox>
+	<tabs>
+		<tab id="tabSchedulerList" label="Job list" selected="true" />
+		<tab id="tabSchedulerEdit" label="New/Edit job" />
+		<tab id="tabSchedulerLog" label="Log" />
+	</tabs>
+	<tabpanels>
+		<tabpanel>
+			<include src="WEB-INF/zul/scheduler/list.zul" />
+		</tabpanel>
+		<tabpanel>
+			<include src="WEB-INF/zul/scheduler/edit.zul" />
+		</tabpanel>
+		<tabpanel>
+			<include src="WEB-INF/zul/scheduler/log.zul" />
+		</tabpanel>
+	</tabpanels>
+</tabbox>
