New feature 3034238: Crawler able to log in protected web site

--- a/WebContent/WEB-INF/zul/scheduler/edit.zul
+++ b/WebContent/WEB-INF/zul/scheduler/edit.zul
@@ -16,8 +16,7 @@
 -->
 <window id="scheduleredit"
 	use="com.jaeksoft.searchlib.web.controller.scheduler.SchedulerEditController">
-	<panel title="@{scheduleredit.currentEditMode}" border="normal"
-		collapsible="true">
+	<panel title="@{scheduleredit.currentEditMode}" border="normal">
 		<panelchildren>
 			<grid>
 				<columns sizable="false">
