--- a/WebContent/WEB-INF/zul/crawler/web/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/index.zul
@@ -25,6 +25,7 @@
 			<tab id="tabCrawlerWebUrl" label="Url browser" />
 			<tab id="tabCrawlerWebCrawl" label="Crawl process" />
 			<tab id="tabCrawlerManualWebCrawl" label="Manual crawl" />
+			<tab id="tabCrawlerCredential" label="Authentication" />
 			<tab id="tabCrawlerWebMapping" label="Field mapping"
 				visible="@{webcrawler.webCrawlerParametersRights}" />
 			<tab id="tabCrawlerWebRobotsTxt" label="Robots.txt" />
@@ -47,6 +48,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerManualWebCrawl.onSelect">
 				<include src="WEB-INF/zul/crawler/web/manualcrawl.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerCredential.onSelect">
+				<include src="WEB-INF/zul/crawler/web/credential.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerWebMapping.onSelect">
 				<include src="WEB-INF/zul/crawler/web/mapping.zul" />
