Work in progress on this new features: - 3141193: FTP/FTPS support in the file crawler - 3141192: SMB/CIFS support in file crawler
Warning, few errors remain. The source does not compile yet.

--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -16,7 +16,7 @@
 -->
 <window id="index" border="normal"
 	use="com.jaeksoft.searchlib.web.controller.IndexController">
-	<caption image="images/oss_16x16_WEB.png"
+	<caption image="images/oss_logo_32.png"
 		label="@{index.release}">
 		<hbox align="center">
 			<label visible="@{index.logged}" value="Connected as: " />
