Work in progress on this new features: - 3141193: FTP/FTPS support in the file crawler - 3141192: SMB/CIFS support in file crawler

--- a/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
@@ -31,7 +31,8 @@
 						<intbox constraint="no empty, no negative"
 							readonly="@{crawlFileProcess.refresh}"
 							value="@{crawlFileProcess.properties.delayBetweenAccesses.value}" />
-
+					</row>
+					<row>
 						<label
 							value="Number of files to crawl between each add: " />
 						<intbox constraint="no empty, no negative"
@@ -47,10 +48,6 @@
 		<toolbar>
 			<textbox readonly="true"
 				value="@{crawlFileProcess.fileCrawlMaster.statusInfo}" />
-			<space />
-			<checkbox label="Optimize at the end of the crawl session"
-				disabled="@{crawlFileProcess.refresh}"
-				checked="@{crawlFileProcess.properties.optimizeAfterSession.value}" />
 			<space />
 			<button id="runButton"
 				disabled="@{crawlFileProcess.fileCrawlMaster.aborting}"
@@ -104,6 +101,56 @@
 			</listbox>
 		</panelchildren>
 	</panel>
+	
+		<separator />
+	<panel title="Thread list" collapsible="true" border="normal">
+		<panelchildren>
+			<listbox model="@{crawlFileProcess.crawlFileMaster.threads}"
+				mold="paging" pageSize="20">
+				<listhead sizable="true">
+					<listheader label="Current host name" />
+					<listheader width="50px" label="Type" />
+					<listheader width="50px" label="Fetched" />
+					<listheader width="50px" label="Fetch rate" />
+					<listheader width="50px" label="New url" />
+					<listheader width="50px" label="Updated" />
+					<listheader width="50px" label="Ignored" />
+					<listheader width="50px" label="Deleted" />
+					<listheader width="50px" label="Url" />
+					<listheader width="50px" label="Total" />
+					<listheader label="Status" />
+					<listheader
+						visible="@{crawlProcess.properties.debug.value}" label="Debug" />
+				</listhead>
+				<listitem self="@{each=thread}">
+					<listcell
+						label="@{thread.hostUrlList.namedItem.name}" />
+					<listcell label="@{thread.hostUrlList.listType}" />
+					<listcell
+						label="@{thread.currentStatistics.fetchedCount}" />
+					<listcell
+						label="@{thread.currentStatistics.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
+					<listcell
+						label="@{thread.currentStatistics.pendingNewUrlCount}" />
+					<listcell
+						label="@{thread.currentStatistics.pendingUpdatedCount}" />
+					<listcell
+						label="@{thread.currentStatistics.ignoredCount}" />
+					<listcell
+						label="@{thread.currentStatistics.pendingDeletedCount}" />
+					<listcell
+						label="@{thread.currentStatistics.urlCount}" />
+					<listcell
+						label="@{thread.currentStatistics.urlListSize}" />
+					<listcell label="@{thread.statusInfo}" />
+					<listcell
+						visible="@{crawlProcess.properties.debug.value}"
+						label="@{thread.debugInfo}" />
+				</listitem>
+			</listbox>
+		</panelchildren>
+	</panel>
+	
 	<timer delay="5000" repeats="true"
 		onTimer="crawlFileProcess.onTimer()"
 		running="@{crawlFileProcess.refresh}" />
