--- a/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
@@ -61,29 +61,29 @@
 			<listbox
 				model="@{crawlFileProcess.fileCrawlMaster.statistics}">
 				<auxhead>
-					<auxheader label="Start time" width="130px" />
+					<auxheader label="Start time" />
 					<auxheader label="Fetched" align="center"
-						colspan="2" width="60px" />
-					<auxheader label="Parsed" width="40px" />
+						colspan="2" width="140px" />
+					<auxheader label="Parsed" width="70px" />
 					<auxheader align="center" colspan="2"
-						label="Added or Updated" width="80px" />
-					<auxheader label="Ignored" width="40px" />
+						label="Added or Updated" width="140px" />
+					<auxheader label="Ignored" width="70px" />
 					<auxheader align="center" label="Deleted"
-						width="80px" />
+						width="70px" />
 					<auxheader align="center" colspan="2"
-						label="File(s)" width="80px" />
+						label="File(s)" width="140px" />
 				</auxhead>
 				<listhead sizable="true">
-					<listheader width="130px" />
-					<listheader label="Count" width="40px" />
-					<listheader label="Rate" width="40px" />
-					<listheader width="40px" />
-					<listheader label="Pending" width="40px" />
-					<listheader label="Committed" width="40px" />
-					<listheader width="40px" />
-					<listheader width="40px" />
-					<listheader label="Processed" width="40px" />
-					<listheader label="Total" width="40px" />
+					<listheader />
+					<listheader label="Count" width="70px" />
+					<listheader label="Rate" width="70px" />
+					<listheader width="70px" />
+					<listheader label="Pending" width="70px" />
+					<listheader label="Committed" width="70px" />
+					<listheader width="70px" />
+					<listheader width="70px" />
+					<listheader label="Processed" width="70px" />
+					<listheader label="Total" width="70px" />
 				</listhead>
 				<listitem self="@{each=stat}">
 					<listcell label="@{stat.startDate}" />
@@ -101,37 +101,28 @@
 			</listbox>
 		</panelchildren>
 	</panel>
-	
-		<separator />
+
+	<separator />
 	<panel title="Thread list" collapsible="true" border="normal">
 		<panelchildren>
-			<listbox model="@{crawlFileProcess.crawlFileMaster.threads}"
+			<listbox model="@{crawlFileProcess.fileCrawlMaster.threads}"
 				mold="paging" pageSize="20">
 				<listhead sizable="true">
-					<listheader label="Current host name" />
-					<listheader width="50px" label="Type" />
-					<listheader width="50px" label="Fetched" />
-					<listheader width="50px" label="Fetch rate" />
-					<listheader width="50px" label="New url" />
-					<listheader width="50px" label="Updated" />
-					<listheader width="50px" label="Ignored" />
-					<listheader width="50px" label="Deleted" />
-					<listheader width="50px" label="Url" />
-					<listheader width="50px" label="Total" />
-					<listheader label="Status" />
-					<listheader
-						visible="@{crawlProcess.properties.debug.value}" label="Debug" />
+					<listheader label="Current folder" />
+					<listheader width="60px" label="Fetched" />
+					<listheader width="60px" label="Rate" />
+					<listheader width="60px" label="Updated" />
+					<listheader width="60px" label="Ignored" />
+					<listheader width="60px" label="Deleted" />
+					<listheader width="60px" label="Total" />
+					<listheader width="180px" label="Status" />
 				</listhead>
 				<listitem self="@{each=thread}">
-					<listcell
-						label="@{thread.hostUrlList.namedItem.name}" />
-					<listcell label="@{thread.hostUrlList.listType}" />
+					<listcell label="@{thread.currentInfo}" />
 					<listcell
 						label="@{thread.currentStatistics.fetchedCount}" />
 					<listcell
 						label="@{thread.currentStatistics.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
-					<listcell
-						label="@{thread.currentStatistics.pendingNewUrlCount}" />
 					<listcell
 						label="@{thread.currentStatistics.pendingUpdatedCount}" />
 					<listcell
@@ -139,18 +130,14 @@
 					<listcell
 						label="@{thread.currentStatistics.pendingDeletedCount}" />
 					<listcell
-						label="@{thread.currentStatistics.urlCount}" />
-					<listcell
 						label="@{thread.currentStatistics.urlListSize}" />
 					<listcell label="@{thread.statusInfo}" />
-					<listcell
-						visible="@{crawlProcess.properties.debug.value}"
-						label="@{thread.debugInfo}" />
 				</listitem>
 			</listbox>
 		</panelchildren>
 	</panel>
-	
+
+
 	<timer delay="5000" repeats="true"
 		onTimer="crawlFileProcess.onTimer()"
 		running="@{crawlFileProcess.refresh}" />
