--- a/WebContent/WEB-INF/zul/crawler/file/path.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/path.zul
@@ -20,24 +20,25 @@
 	<listbox fixedLayout="true" model="@{searchPath.fileList}"
 		multiple="false" checkmark="false">
 		<listhead sizable="true">
-			<listheader width="30%" label="File" />
+			<listheader width="20%" label="File" />
 			<listheader width="140px" label="Index Date" />
 			<listheader width="140px" label="Modified date" />
 			<listheader label="Type" />
 			<listheader label="Extension" />
 			<listheader label="Size" />
 			<listheader label="Lang" />
-			<listheader label="Lang method" />
 			<listheader label="Fetch" />
 			<listheader label="Parsing" />
 			<listheader label="Index" />
 		</listhead>
 		<auxhead>
 			<auxheader>
-				<hbox>
+				<vbox>
+					<listbox mold="select" width="90%"
+						model="@{searchPath.repositoryList}"
+						selectedItem="@{searchPath.repository}" />
 					<textbox width="90%" value="@{searchPath.like}" />
-					<button label="Search" forward="onSearch" />
-				</hbox>
+				</vbox>
 			</auxheader>
 			<auxheader>
 				<vbox>
@@ -65,9 +66,6 @@
 			<auxheader>
 				<textbox cols="4" value="@{searchPath.lang}" />
 			</auxheader>
-			<auxheader>
-				<textbox cols="8" value="@{searchPath.langMethod}" />
-			</auxheader>
 
 			<auxheader>
 				<listbox mold="select" width="50px" fixedLayout="true"
@@ -87,6 +85,11 @@
 			</auxheader>
 
 		</auxhead>
+		<auxhead>
+			<auxheader colspan="10" align="center">
+				<button label="Search" forward="onSearch" />
+			</auxheader>
+		</auxhead>
 		<listitem self="@{each='file'}">
 			<listcell label="@{file.uri}" />
 			<listcell
@@ -97,19 +100,17 @@
 			<listcell label="@{file.extension}" />
 			<listcell label="@{file.humanSize}" />
 			<listcell label="@{file.lang}" />
-			<listcell label="@{file.langMethod}" />
 			<listcell label="@{file.fetchStatus}" />
 			<listcell label="@{file.ParserStatus}" />
 			<listcell label="@{file.IndexStatus}" />
 		</listitem>
 		<listfoot>
 
-			<listfooter span="16">
+			<listfooter span="10">
 				<paging id="paging" detailed="true"
 					totalSize="@{searchPath.totalSize}"
 					pageSize="@{searchPath.pageSize}"
 					activePage="@{searchPath.activePage}" />
-				<button label="Reload" forward="onReload" />
 				<label value="Line per page: " />
 				<intbox cols="3"
 					constraint="no negative, no zero, no negative"
