Work in progress on this new features: - 3141193: FTP/FTPS support in the file crawler - 3141192: SMB/CIFS support in file crawler

--- a/WebContent/WEB-INF/zul/crawler/file/edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/edit.zul
@@ -116,6 +116,11 @@
 							checked="@{filepathedit.currentFilePath.withSubDir}" />
 					</row>
 					<row>
+						<label value="Delay between each access (ms): " />
+						<intbox
+							value="@{filepathedit.currentFilePath.delay}" />
+					</row>
+					<row>
 						<label value="Enabled: " />
 						<checkbox
 							checked="@{filepathedit.currentFilePath.enabled}" />
