--- a/WebContent/WEB-INF/zul/crawler/file/edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/edit.zul
@@ -39,7 +39,12 @@
 					<row visible="@{filepathedit.notLocalFileType}">
 						<label value="User name: " />
 						<textbox
-							value="@{filepathedit.currentFilePath.username}" cols="30" />
+							value="@{filepathedit.currentFilePath.username}" cols="50" />
+					</row>
+					<row visible="@{filepathedit.domain}">
+						<label value="Domain: " />
+						<textbox
+							value="@{filepathedit.currentFilePath.domain}" cols="50" />
 					</row>
 					<row visible="@{filepathedit.notLocalFileType}">
 						<label value="Password: " />
