--- a/WebContent/WEB-INF/zul/query/index.zul
+++ b/WebContent/WEB-INF/zul/query/index.zul
@@ -41,6 +41,7 @@
 			<tab id="tabSort" label="Sorted fields" />
 			<tab id="tabFilter" label="Filters" />
 			<tab id="tabCollapsing" label="Collapsing" />
+			<tab id="tabMoreLikeThis" label="More like this" />
 			<tab id="tabScoreFunction" label="Score function" />
 			<tab id="tabSpellCheck" label="SpellCheck" />
 		</tabs>
@@ -65,6 +66,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabCollapsing.onSelect">
 				<include src="WEB-INF/zul/query/collapsing.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabMoreLikeThis.onSelect">
+				<include src="WEB-INF/zul/query/moreLikeThis.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabScoreFunction.onSelect">
 				<include src="WEB-INF/zul/query/scoreFunction.zul" />
