--- a/WebContent/WEB-INF/zul/query/moreLikeThis.zul
+++ b/WebContent/WEB-INF/zul/query/moreLikeThis.zul
@@ -23,8 +23,59 @@
 		</columns>
 		<rows>
 			<row>
-				<label>Active</label>
-				<checkbox checked="@{mlt.request.moreLikeThis}"/>
+				<label value="Active: " />
+				<checkbox checked="@{mlt.request.moreLikeThis}" />
+			</row>
+			<row>
+				<label value="Document query: " />
+				<textbox width="95%"
+					value="@{mlt.request.moreLikeThisDocQuery}" />
+			</row>
+			<row>
+				<label value="Fields: " />
+				<listbox
+					model="@{mlt.request.moreLikeThisFieldList.list}">
+					<listhead>
+						<listheader>
+							<listbox model="@{mlt.fieldsLeft}"
+								mold="select" selectedItem="@{mlt.selectedField}" />
+						</listheader>
+						<listheader width="50px" align="center">
+							<button tooltiptext="Add a field"
+								image="/images/action_add.png" forward="onAddField" />
+						</listheader>
+					</listhead>
+					<listitem self="@{each=mltField}">
+						<listcell label="@{mltField.name}" />
+						<listcell>
+							<custom-attributes mltField="@{mltField}" />
+							<button tooltiptext="Remove the field"
+								image="/images/action_delete.png"
+								onClick="mlt.onRemoveField(self)" />
+						</listcell>
+					</listitem>
+				</listbox>
+			</row>
+			<row>
+				<label value="Minimum word length: " />
+				<intbox value="@{mlt.request.moreLikeThisMinWordLen}" />
+			</row>
+			<row>
+				<label value="Maximum word length: " />
+				<intbox value="@{mlt.request.moreLikeThisMaxWordLen}" />
+			</row>
+			<row>
+				<label value="Minimum document frequency: " />
+				<intbox value="@{mlt.request.moreLikeThisMinDocFreq}" />
+			</row>
+			<row>
+				<label value="Minimum term frequency: " />
+				<intbox value="@{mlt.request.moreLikeThisMinTermFreq}" />
+			</row>
+			<row>
+				<label value="Stop words: " />
+				<listbox model="@{mlt.stopWordsList}" mold="select"
+					selectedItem="@{mlt.request.moreLikeThisStopWords}" />
 			</row>
 		</rows>
 	</grid>
