Fix the bug 3178432: Wrong cron values in the scheduler

--- a/WebContent/WEB-INF/zul/scheduler/log.zul
+++ b/WebContent/WEB-INF/zul/scheduler/log.zul
@@ -27,7 +27,7 @@
 	<panel title="List of last logs " border="normal"
 		visible="@{schedulerlogs.jobSelected}">
 		<toolbar>
-			<button label="Refresh" action="onRefresh" />
+			<button label="Refresh" forward="onReload" />
 		</toolbar>
 		<panelchildren>
 			<listbox model="@{schedulerlogs.selectedJob.jobLog.logs}"
