--- a/WebContent/WEB-INF/zul/crawler/web/manualcrawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/manualcrawl.zul
@@ -109,7 +109,7 @@
 									<listbox
 										model="@{fieldContent.values}" mold="paging" pageSize="10">
 										<listitem
-											self="@{each='fieldValue'}" label="@{fieldValue}" />
+											self="@{each='fieldValue'}" label="@{fieldValue.value}" />
 									</listbox>
 								</panelchildren>
 							</panel>
