--- a/WebContent/WEB-INF/zul/crawler/web/robotstxt.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/robotstxt.zul
@@ -16,6 +16,8 @@
 -->
 <window id="robotsTxtCtrl"
 	use="com.jaeksoft.searchlib.web.controller.crawler.web.RobotsTxtController">
+	<checkbox label="Enabled" checked="@{robotsTxtCtrl.enabled.value}" />
+	<separator />
 	<listbox fixedLayout="true" model="@{robotsTxtCtrl.robotsTxtList}"
 		multiple="false" checkmark="false" mold="paging"
 		selectedItem="@{robotsTxtCtrl.selectedItem}"
@@ -52,7 +54,8 @@
 						<listcell>
 							<panel title="@{entry.key}">
 								<panelchildren>
-									<listbox model="@{entry.value.set}">
+									<listbox
+										model="@{entry.value.set}">
 										<listitem
 											self="@{each='entry2'}">
 											<listcell label="@{entry2}" />
